# datanavigator

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements.yml
.github/workflows/: ci.yml
datanavigator/: __init__.py  _config.py  _modals.py  _qt.py  assets.py  components.py  core.py  events.py  examples.py  opticalflow.py  plots.py  pointtracking.py  postprocess.py  signals.py  styles.py  utils.py  video_reader.py  videos.py
datanavigator/_vendor/: __init__.py  pims_pyav_reader.py
docs/: api.md  conf.py  index.md
tests/: conftest.py  test___init__.py  test__config.py  test_components.py  test_core.py  test_events.py  test_examples.py  test_fast_render_parity.py  test_key_bindings.py  test_modals.py  test_opticalflow.py  test_plots.py  test_pointtracking.py  test_signals.py  test_utils.py  test_video_reader.py  test_videos.py
tests/decord_pyav_parity/: .gitignore  README.md  clip_gen.py  oracle.py  readers.py  report.py  run_parity.py
tests/qt_learning/: 01_helloworld.py  02_matplotlib_in_qt.py  03_phase1_smoke.py  04_phase2_smoke.py  05_phase3_smoke.py  06_downstream_smoke.py  07_phase4a_smoke.py  08_benchmark.py  08_rc2_statevars_widget.py  09_benchmark_dustrack.py  10_benchmark_enhance.py  10_diagnose_buttons.py  11_live_button_probe.py  11_profile_dustrack_update.py  12_benchmark_blit_feasibility.py  12_show_key_bindings_smoke.py  13_benchmark_hybrid_canvas_feasibility.py  13_key_event_after_button_click.py  14_benchmark_fast_render.py  14_investigate_hover_key.py  15_interactive_focus_probe.py  16_z_binding_probe.py  17_probe_t_on_image_axes.py  18_live_t_watcher.py  19_minimal_keypress_probe.py  20_raw_qt_vs_mpl_key.py  21_dustrack_keybindings_smoke.py  22_add_multi_smoke.py  23_style_tag_smoke.py
