[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datanavigator"
authors = [{name = "Praneeth Namburi", email = "praneeth.namburi@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["version", "description"]
keywords = ["data", "visualization", "analysis", "time series", "video", "images", "scientific"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "opencv-python",
    "portion",
    "ffmpeg-python",
    "pysampled",
    "av",
    "tables>=3.10",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Home = "https://github.com/praneethnamburi/datanavigator"
Repository = "https://github.com/praneethnamburi/datanavigator"
Issues = "https://github.com/praneethnamburi/datanavigator/issues"
Documentation = "https://datanavigator.readthedocs.io/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_first_party = ["datanavigator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
